@@ -1,3 +1,9 @@
+2013-01-13  Richard Stallman  <rms@gnu.org>
+
+	* message.el (message-forward-make-body-mime): New args BEG, END
+	specify what part of FORWARD-BUFFER to use.  Do the work directly
+	instead of calling `mml-insert-buffer'.
+
 2013-01-11  Aaron S. Hawley  <Aaron.Hawley@vtinfo.com>
 
 	* gnus-start.el (gnus-check-new-newsgroups): Fix ambiguous doc string
@@ -37,6 +43,7 @@
 	(mml-smime-epg-find-usable-secret-key): New helper function copied from
 	mml2015.el.
 
+>>>>>>> MERGE-SOURCE
 2012-12-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-msg.el (gnus-inews-insert-gcc): Don't insert Gcc headers if Gnus
